--- a/frontend/src/components/squres/square/Square.css
+++ b/frontend/src/components/squres/square/Square.css
@@ -9,6 +9,13 @@
     padding: 5px;
 }
 
-.square:hover {
+/* .square:hover {
+    Hover does not like click handler!
     background-color: #eee;
+} */
+
+.square--selected {
+    background-color: rgb(173, 5, 5);
+    pointer-events: none;
+    color: #fff;
 }
