--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,5 @@
 body {
+  background-color: #eee;
+  font-family: Arial, Helvetica, sans-serif;
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif
 }
