--- a/client/src/components/Modal/Modal.css
+++ b/client/src/components/Modal/Modal.css
@@ -1,8 +1,8 @@
 .modal-bg {
     background-color: rgba(0, 0, 0, 0.5);
-    height: 100vh;
-    width: 100vw;
+    width: 100%;
     position: absolute;
+    top: 0;
     bottom: 0;
 }
 
@@ -19,7 +19,7 @@
     position: absolute;
     width: fit-content;
 
-    top: 200px;
+    top: 45%;
     right: 0;
     left: 0;
 }
