--- a/client/src/components/squares/square/Square.css
+++ b/client/src/components/squares/square/Square.css
@@ -10,11 +10,6 @@
     padding: 5px;
 }
 
-/* .square:hover {
-    Hover does not like click handler!
-    background-color: #eee;
-} */
-
 .square--selected {
     background-color: rgb(173, 5, 5) !important;
     pointer-events: none;
@@ -27,4 +22,12 @@
     color: #fff;
     pointer-events: none;
     text-decoration: line-through;
+}
+
+@media (max-width: 450px), (max-height: 550px) {
+    .square {
+        width: 60px;
+        height: 60px;
+        font-size: 10px;
+    }
 }
