--- a/client/src/components/squares/Squares.css
+++ b/client/src/components/squares/Squares.css
@@ -5,3 +5,11 @@
     margin: 20px auto 20px auto;
     width: fit-content;
 }
+
+
+/* @media (max-width: 600px) {
+    .squares {
+        margin-left: 5px;
+        margin-right: 5px;
+    }
+} */
